--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,11 @@
-@mixin flexLayout {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+$color-primary:#4e4e4e;
+$color-secondary:#f3f3f3;
+$color-tertiary:#a8a8a8;
+$color-btn:#fff;
+$color-services:#616161;
+$color-slider:#a1a1a1;
+$color-footer-heading:#6c6c6c;
+$color-footer:#cacaca;
+$color-hover:#33c0a5;
+$color-header:#e5e5e5;
+$color-bg:#3f8dbf;
