--- a/css/global.css
+++ b/css/global.css
@@ -16,10 +16,50 @@
       #header #nav ul li a {
         text-decoration: none;
         color: black;
-        font-size: 18px;
+        font-size: 16px;
         text-transform: uppercase; }
         #header #nav ul li a:hover {
           color: #33c0a5;
+          transition: all .5s; }
+  #header .banner {
+    background-image: url("../images/banner.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    height: calc(100vh - 67px);
+    position: relative; }
+    #header .banner-centering {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%; }
+      #header .banner-centering h1 {
+        font-size: 40px;
+        color: #f3f3f3;
+        margin-bottom: 10px; }
+      #header .banner-centering h2 {
+        font-size: 32px;
+        text-align: center;
+        color: #a8a8a8;
+        margin-bottom: 10px; }
+      #header .banner-centering button {
+        background-color: #3f8dbf;
+        color: #fff;
+        padding: 10px 10px;
+        border: 1px solid #3f8dbf;
+        outline: none;
+        border-radius: 5px;
+        font-size: 14px;
+        margin: 16px auto;
+        display: block;
+        cursor: pointer;
+        text-transform: uppercase; }
+        #header .banner-centering button:hover {
+          background-color: #fff;
+          color: #3f8dbf;
+          border: 1px solid #fff;
           transition: all .5s; }
 
 * {
