--- a/scss/_all.scss
+++ b/scss/_all.scss
@@ -19,12 +19,59 @@
         a{
           text-decoration: none;
           color: black;
-          font-size: 18px;
+          font-size: 16px;
           text-transform: uppercase;
           &:hover{
             color: $color-hover;
             transition: all .5s;
           }
+        }
+      }
+    }
+  }
+  .banner{
+    background-image: url("../images/banner.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    height: calc(100vh - 67px);
+    position: relative;
+    &-centering{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      h1{
+        font-size: 40px;
+        color: $color-secondary;
+        margin-bottom: 10px;
+      }
+      h2{
+        font-size: 32px;
+        text-align: center;
+        color: $color-tertiary;
+        margin-bottom: 10px;
+      }
+      button{
+        background-color: $color-bg;
+        color: $color-btn;
+        padding: 10px 10px;
+        border: 1px solid $color-bg;
+        outline: none;
+        border-radius: 5px;
+        font-size: 14px;
+        margin: 16px auto;
+        display: block;
+        cursor: pointer;
+        text-transform: uppercase;
+
+        &:hover{
+          background-color: $color-btn;
+          color: $color-bg;
+          border: 1px solid $color-btn;
+          transition: all .5s;
         }
       }
     }
