--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+.container {
+  max-width: 1140px;
+  margin: 0 auto; }
+
+body {
+  font-family: "Roboto Slab", serif; }
+
+h1, h2, p, button, a {
+  font-family: "Roboto Slab", serif; }
+
+.services-section div h1, .services-section div p {
+  text-align: center; }
+
+.services-section div h1, .services-section div p {
+  text-align: center; }
+
 #header {
   background-color: #e5e5e5; }
   #header-flex {
@@ -50,7 +71,7 @@
         padding: 10px 10px;
         border: 1px solid #3f8dbf;
         outline: none;
-        border-radius: 5px;
+        border-radius: 2px;
         font-size: 14px;
         margin: 16px auto;
         display: block;
@@ -62,17 +83,21 @@
           border: 1px solid #fff;
           transition: all .5s; }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; }
-
-.container {
-  max-width: 1140px;
-  margin: 0 auto; }
-
-body {
-  font-family: "Roboto Slab", serif; }
-
-h1, h2, p, button, a {
-  font-family: "Roboto Slab", serif; }
+.services-section {
+  display: flex;
+  justify-content: space-between;
+  padding: 50px 0;
+  border-bottom: 1px solid #d9d9d9; }
+  .services-section div {
+    flex-basis: 25%;
+    padding: 0 11px; }
+    .services-section div h1 {
+      font-size: 18px;
+      color: #4e4e4e;
+      padding: 15px 0; }
+    .services-section div p {
+      font-size: 14px;
+      color: #616161; }
+    .services-section div img {
+      margin: 0 auto;
+      display: block; }
