--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,3 +9,8 @@ $color-footer:#cacaca;
 $color-hover:#33c0a5;
 $color-header:#e5e5e5;
 $color-bg:#3f8dbf;
+$color-border:#d9d9d9;
+
+%centerSpace{
+  text-align: center;
+}
