--- a/css/global.css
+++ b/css/global.css
@@ -17,8 +17,16 @@ h1, h2, p, button, a {
 .services-section div h1, .services-section div p {
   text-align: center; }
 
+.section-work-grid img {
+  width: 100%;
+  height: 280px; }
+
 .services-section div h1, .services-section div p {
   text-align: center; }
+
+.section-work-grid img {
+  width: 100%;
+  height: 280px; }
 
 #header {
   background-color: #e5e5e5; }
@@ -101,3 +109,28 @@ h1, h2, p, button, a {
     .services-section div img {
       margin: 0 auto;
       display: block; }
+
+.section-work {
+  padding: 40px 0; }
+  .section-work h1 {
+    font-size: 18px; }
+  .section-work-grid {
+    display: flex;
+    padding: 40px 0 0; }
+    .section-work-grid div {
+      flex-basis: 33.33%;
+      padding-left: 10px; }
+      .section-work-grid div:first-child {
+        padding-left: 0px !important; }
+    .section-work-grid h1 {
+      font-size: 18px;
+      color: #4e4e4e;
+      padding: 18px 0; }
+    .section-work-grid h2 {
+      font-size: 13px;
+      color: #a8a8a8;
+      padding-bottom: 15px; }
+    .section-work-grid p {
+      font-size: 14px;
+      color: #6c6c6c;
+      line-height: 30px; }
