--- a/css/global.css
+++ b/css/global.css
@@ -1,11 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700&display=swap");
-.services-section div h1, .services-section div p {
-  text-align: center; }
-
-.section-work-grid img {
-  width: 100%;
-  height: 280px; }
-
 * {
   margin: 0;
   padding: 0;
@@ -21,15 +14,14 @@ body {
 h1, h2, p, button, a {
   font-family: "Roboto Slab", serif; }
 
+.services-section div h1, .services-section div p {
+  text-align: center; }
+
 .d-flex {
   display: flex; }
 
 .services-section div h1, .services-section div p {
   text-align: center; }
-
-.section-work-grid img {
-  width: 100%;
-  height: 280px; }
 
 #header {
   background-color: #e5e5e5; }
@@ -98,7 +90,7 @@ h1, h2, p, button, a {
   display: flex;
   justify-content: space-between;
   padding: 50px 0;
-  border-bottom: 1px solid #6b6767; }
+  border-bottom: 1px solid #d9d9d9; }
   .services-section div {
     flex-basis: 25%;
     padding: 0 11px; }
