JO-13 works column section completed.

--- a/scss/_all.scss
+++ b/scss/_all.scss
@@ -116,7 +116,7 @@
       flex-basis: 33.33%;
       padding-left: 10px;
       &:first-child{
-        padding-left: 0px !important;
+        padding-left: 0 !important;
       }
     }
     img{
