JO-14 slick slider section completed.

--- a/css/global.css
+++ b/css/global.css
@@ -134,3 +134,6 @@ h1, h2, p, button, a {
       font-size: 14px;
       color: #6c6c6c;
       line-height: 30px; }
+
+.section-testmonials {
+  background-color: #e5e5e5; }
