--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,10 +6,12 @@ $color-services:#616161;
 $color-slider:#a1a1a1;
 $color-footer-heading:#6c6c6c;
 $color-footer:#cacaca;
+$color-footer-bg:#000;
 $color-hover:#33c0a5;
 $color-header:#e5e5e5;
 $color-bg:#3f8dbf;
-$color-border:#d9d9d9;
+$color-border:#6b6767;
+$color-icon:#a89574;
 
 %centerSpace{
   text-align: center;
