--- a/css/global.css
+++ b/css/global.css
@@ -47,7 +47,7 @@ h1, h2, p, button, a {
       margin: 0 20px; }
       #header #nav ul li a {
         text-decoration: none;
-        color: black;
+        color: #000;
         font-size: 16px;
         text-transform: uppercase; }
         #header #nav ul li a:hover {
