--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,6 @@
+$nav-link-color:#000;
+$nav-link-hover-color:#33c0a5;
+$header-bg-color:#e5e5e5;
 $color-primary:#4e4e4e;
 $color-secondary:#f3f3f3;
 $color-tertiary:#a8a8a8;
@@ -7,8 +10,6 @@ $color-slider:#a1a1a1;
 $color-footer-heading:#6c6c6c;
 $color-footer:#cacaca;
 $color-footer-bg:#000;
-$color-hover:#33c0a5;
-$color-header:#e5e5e5;
 $color-bg:#3f8dbf;
 $color-border:#6b6767;
 $color-icon:#a89574;
