--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,16 +1,20 @@
 $nav-link-color:#000;
 $nav-link-hover-color:#33c0a5;
 $header-bg-color:#e5e5e5;
+$color-banner-heading:#f3f3f3;
+$color-banner-sub-heading:#a8a8a8;
+$color-banner-btn-bg:#3f8dbf;
+$color-banner-btn-bg-hover:#fff;
+$color-banner-btn-text:#fff;
+$color-banner-btn-text-hover:#3f8dbf;
 $color-primary:#4e4e4e;
 $color-secondary:#f3f3f3;
 $color-tertiary:#a8a8a8;
-$color-btn:#fff;
 $color-services:#616161;
 $color-slider:#a1a1a1;
 $color-footer-heading:#6c6c6c;
 $color-footer:#cacaca;
 $color-footer-bg:#000;
-$color-bg:#3f8dbf;
 $color-border:#6b6767;
 $color-icon:#a89574;
 
