--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700&display=swap");
+.services-section div h1, .services-section div p {
+  text-align: center; }
+
+.section-work-grid img {
+  width: 100%;
+  height: 280px; }
+
 * {
   margin: 0;
   padding: 0;
@@ -20,8 +27,9 @@ h1, h2, p, button, a {
 .services-section div h1, .services-section div p {
   text-align: center; }
 
-.services-section div h1, .services-section div p {
-  text-align: center; }
+.section-work-grid img {
+  width: 100%;
+  height: 280px; }
 
 #header {
   background-color: #e5e5e5; }
@@ -103,7 +111,10 @@ h1, h2, p, button, a {
       color: #616161; }
     .services-section div img {
       margin: 0 auto;
-      display: block; }
+      display: block;
+      width: 90px;
+      height: 90px;
+      border-radius: 100%; }
 
 .section-work {
   padding: 40px 0; }
