--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,12 +1,12 @@
 $nav-link-color:#000;
 $nav-link-hover-color:#33c0a5;
 $header-bg-color:#e5e5e5;
-$color-banner-heading:#f3f3f3;
-$color-banner-sub-heading:#a8a8a8;
-$color-banner-btn-bg:#3f8dbf;
-$color-banner-btn-bg-hover:#fff;
-$color-banner-btn-text:#fff;
-$color-banner-btn-text-hover:#3f8dbf;
+$banner-heading-color:#f3f3f3;
+$banner-sub-heading-color:#a8a8a8;
+$banner-btn-bg-color:#3f8dbf;
+$banner-btn-bg-hover-color:#fff;
+$banner-btn-text-color:#fff;
+$banner-btn-text-hover-color:#3f8dbf;
 $color-primary:#4e4e4e;
 $color-secondary:#f3f3f3;
 $color-tertiary:#a8a8a8;
