--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -20,3 +20,11 @@ h1, h2, p, button, a{
 .d-flex{
     display: flex;
 }
+%centerSpace{
+    text-align: center;
+}
+
+%fullWidth{
+    width: 100%;
+    height: 280px;
+}
