--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,3 @@
-
 $nav-link-color:#000;
 $nav-link-hover-color:#33c0a5;
 $header-bg-color:#e5e5e5;
@@ -9,21 +8,11 @@ $color-banner-btn-bg-hover:#fff;
 $color-banner-btn-text:#fff;
 $color-banner-btn-text-hover:#3f8dbf;
 $services-heading-color:#4e4e4e;
-$color-secondary:#f3f3f3;
-$color-tertiary:#a8a8a8;
+$services-border-color:#6b6767;
 $body-text-color:#616161;
+$work-sub-heading-color:#a8a8a8;
 $color-slider:#a1a1a1;
 $color-footer-heading:#6c6c6c;
 $color-footer:#cacaca;
 $color-footer-bg:#000;
-$color-border:#6b6767;
 $color-icon:#a89574;
-
-%centerSpace{
-  text-align: center;
-}
-
-%fullWidth{
-  width: 100%;
-  height: 280px;
-}
