JO-14 fix naming convention of footer section color.

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,8 +11,7 @@ $services-heading-color:#4e4e4e;
 $services-border-color:#6b6767;
 $body-text-color:#616161;
 $work-sub-heading-color:#a8a8a8;
-$color-slider:#a1a1a1;
-$color-footer-heading:#6c6c6c;
-$color-footer:#cacaca;
-$color-footer-bg:#000;
-$color-icon:#a89574;
+$footer-heading-color:#6c6c6c;
+$footer-text-color:#cacaca;
+$footer-bg-color:#000;
+$footer-icon-color:#a89574;
