--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -20,6 +20,15 @@ h1, h2, p, button, a{
 .d-flex{
     display: flex;
 }
+.justify-content-between{
+    justify-content: space-between;
+}
+.justify-content-space-between{
+    justify-content: space-between;
+}
+.align-items-center{
+    align-items: center;
+}
 %centerSpace{
     text-align: center;
 }
