JO-11 flex classes added in common sass file.

--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -20,3 +20,12 @@ h1, h2, p, button, a{
 .d-flex{
     display: flex;
 }
+.justify-content-between{
+    justify-content: space-between;
+}
+.justify-content-space-between{
+    justify-content: space-between;
+}
+.align-items-center{
+    align-items: center;
+}
