--- a/css/global.css
+++ b/css/global.css
@@ -2,14 +2,36 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box; }
+
+#wrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden; }
+
+#main {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  min-height: calc(100vh - 500px); }
+
+body {
+  font-family: "Roboto Slab", serif;
+  margin: 0;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
 
 .container {
   max-width: 1140px;
   margin: 0 auto; }
 
-body {
-  font-family: "Roboto Slab", serif; }
+a {
+  text-decoration: none; }
 
 h1, h2, p, button, a {
   font-family: "Roboto Slab", serif; }
@@ -17,22 +39,66 @@ h1, h2, p, button, a {
 .d-flex {
   display: flex; }
 
-.services-section div h1, .services-section div p {
+.justify-content-between {
+  justify-content: space-between; }
+
+.justify-content-space-between {
+  justify-content: space-between; }
+
+.justify-content-center {
+  justify-content: center; }
+
+.align-items-center {
+  align-items: center; }
+
+.text-center {
   text-align: center; }
+
+.img-responsive {
+  width: 100%;
+  height: auto;
+  display: block; }
+
+.list-none {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+.d-block {
+  display: block; }
+
+label {
+  cursor: pointer; }
+
+input[type="submit"],
+button {
+  cursor: pointer;
+  transition: all 0.4s ease;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease; }
+
+img {
+  vertical-align: top;
+  border-style: none; }
+
+button:focus,
+textarea:focus,
+input:focus,
+select {
+  outline: none; }
+
+*:focus {
+  outline: none; }
 
 #header {
   background-color: #e5e5e5; }
-  #header-flex {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  #header .header-flex {
     padding: 16px 0; }
   #header .logo {
     width: 130px; }
   #header #nav ul {
-    display: flex; }
+    list-style: none; }
     #header #nav ul li {
-      list-style: none;
       margin: 0 20px; }
       #header #nav ul li a {
         text-decoration: none;
@@ -42,63 +108,65 @@ h1, h2, p, button, a {
         #header #nav ul li a:hover {
           color: #33c0a5;
           transition: all .5s; }
-  #header .banner {
-    background-image: url("../images/banner.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: scroll;
-    height: calc(100vh - 67px);
-    position: relative; }
-    #header .banner-centering {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100%; }
-      #header .banner-centering h1 {
-        font-size: 40px;
-        color: #f3f3f3;
-        margin-bottom: 10px; }
-      #header .banner-centering h2 {
-        font-size: 32px;
-        text-align: center;
-        color: #a8a8a8;
-        margin-bottom: 10px; }
-      #header .banner-centering button {
-        background-color: #3f8dbf;
-        color: #fff;
-        padding: 10px 10px;
-        border: 1px solid #3f8dbf;
-        outline: none;
-        border-radius: 2px;
-        font-size: 14px;
-        margin: 16px auto;
-        display: block;
-        cursor: pointer;
-        text-transform: uppercase; }
-        #header .banner-centering button:hover {
-          background-color: #fff;
-          color: #3f8dbf;
-          border: 1px solid #fff;
-          transition: all .5s; }
+
+.banner {
+  background-image: url("../images/banner.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: scroll;
+  height: calc(100vh - 62px);
+  position: relative;
+  margin-bottom: 50px; }
+  .banner-centering {
+    flex-direction: column;
+    max-width: 1140px;
+    margin: 0 auto;
+    height: 100%; }
+    .banner-centering h1 {
+      font-size: 40px;
+      color: #f3f3f3;
+      margin-bottom: 10px; }
+    .banner-centering h2 {
+      font-size: 32px;
+      text-align: center;
+      color: #a8a8a8;
+      margin-bottom: 10px; }
+    .banner-centering .btn-primary {
+      background-color: #3f8dbf;
+      color: #fff;
+      padding: 10px 10px;
+      border: 1px solid #3f8dbf;
+      outline: none;
+      border-radius: 2px;
+      font-size: 14px;
+      margin: 16px auto;
+      display: block;
+      cursor: pointer;
+      text-transform: uppercase; }
+      .banner-centering .btn-primary:hover {
+        background-color: #fff;
+        color: #3f8dbf;
+        border: 1px solid #fff;
+        transition: all .5s; }
 
 .services-section {
   display: flex;
   justify-content: space-between;
-  padding: 50px 0;
-  border-bottom: 1px solid #6b6767; }
-  .services-section div {
+  border-bottom: 1px solid #6b6767;
+  margin-bottom: 40px; }
+  .services-section .col {
     flex-basis: 25%;
-    padding: 0 11px; }
-    .services-section div h1 {
+    padding: 0 11px;
+    margin-bottom: 50px; }
+    .services-section .col h3 {
       font-size: 18px;
       color: #4e4e4e;
       padding: 15px 0; }
-    .services-section div p {
+    .services-section .col p {
       font-size: 14px;
       color: #616161; }
-    .services-section div img {
+    .services-section .col img {
       margin: 0 auto;
       display: block;
       width: 90px;
@@ -106,30 +174,31 @@ h1, h2, p, button, a {
       border-radius: 100%; }
 
 .section-work {
-  padding: 40px 0; }
-  .section-work h1 {
+  margin-bottom: 40px; }
+  .section-work h3 {
     font-size: 18px;
-    color: #4e4e4e; }
-  .section-work-grid {
-    display: flex;
-    padding: 40px 0 0; }
-    .section-work-grid div {
-      flex-basis: 33.33%;
-      padding-left: 10px; }
-      .section-work-grid div:first-child {
-        padding-left: 0 !important; }
-    .section-work-grid h1 {
-      font-size: 18px;
-      color: #4e4e4e;
-      padding: 18px 0; }
-    .section-work-grid h2 {
-      font-size: 13px;
-      color: #a8a8a8;
-      padding-bottom: 15px; }
-    .section-work-grid p {
-      font-size: 14px;
-      color: #616161;
-      line-height: 30px; }
+    color: #4e4e4e;
+    margin-bottom: 40px; }
+  .section-work-grid .col {
+    flex-basis: 33.33%;
+    padding-left: 10px; }
+    .section-work-grid .col:first-child {
+      padding-left: 0; }
+  .section-work-grid img {
+    height: 280px;
+    object-fit: cover; }
+  .section-work-grid h4 {
+    font-size: 18px;
+    color: #4e4e4e;
+    padding: 18px 0; }
+  .section-work-grid h5 {
+    font-size: 13px;
+    color: #a8a8a8;
+    padding-bottom: 15px; }
+  .section-work-grid p {
+    font-size: 14px;
+    color: #616161;
+    line-height: 30px; }
 
 .section-testmonials {
   background-color: #e5e5e5; }
@@ -137,36 +206,37 @@ h1, h2, p, button, a {
 #footer {
   background-color: #000;
   padding: 50px 0; }
-  #footer-grid {
-    display: flex;
-    justify-content: space-between;
+  #footer .footer-grid {
     border-bottom: 1px solid #6b6767; }
-    #footer-grid div {
+    #footer .footer-grid .footer-col {
       flex-basis: 25%;
       padding-left: 30px; }
-      #footer-grid div:first-child {
-        padding-left: 0 !important; }
-      #footer-grid div h1 {
+      #footer .footer-grid .footer-col:first-child {
+        padding-left: 0; }
+      #footer .footer-grid .footer-col .title {
         font-size: 18px;
-        color: #6c6c6c;
-        padding-bottom: 25px; }
-      #footer-grid div h2 {
-        color: #cacaca;
-        font-size: 14px;
-        padding-bottom: 25px;
-        font-weight: 300; }
-        #footer-grid div h2 span {
-          display: block;
-          padding-top: 9px; }
-        #footer-grid div h2 i {
-          color: #a89574;
-          font-size: 10px;
-          margin: 5px 6px 0 0; }
-      #footer-grid div p {
+        color: #6c6c6c; }
+      #footer .footer-grid .footer-col ul {
+        list-style: none;
+        margin-top: 30px; }
+        #footer .footer-grid .footer-col ul li {
+          color: #cacaca;
+          font-size: 14px;
+          padding-bottom: 25px;
+          display: flex;
+          font-weight: 300; }
+          #footer .footer-grid .footer-col ul li span {
+            display: block;
+            padding-top: 9px; }
+          #footer .footer-grid .footer-col ul li i {
+            color: #a89574;
+            font-size: 10px;
+            margin: 5px 6px 0 0; }
+      #footer .footer-grid .footer-col p {
         font-size: 14px;
         color: #cacaca;
         padding-bottom: 10px; }
-        #footer-grid div p i {
+        #footer .footer-grid .footer-col p i {
           color: #a89574;
           font-size: 10px;
           margin: 5px 6px 0 0; }
