--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -1,48 +1,116 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700&display=swap');
+
 $roboto-slab: 'Roboto Slab', serif;
 $open-sans: 'Open Sans', sans-serif;
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-.container{
-    max-width: 1140px;
-    margin: 0 auto;
-}
-body{
-    font-family: $roboto-slab;
-}
-h1, h2, p, button, a{
-    font-family: $roboto-slab;
-}
-.d-flex{
-    display: flex;
-}
-.justify-content-between{
-    justify-content: space-between;
-}
-.justify-content-space-between{
-    justify-content: space-between;
-}
-.align-items-center{
-    align-items: center;
-}
-.justify-content-between{
-    justify-content: space-between;
-}
-.justify-content-space-between{
-    justify-content: space-between;
-}
-.align-items-center{
-    align-items: center;
-}
-%centerSpace{
-    text-align: center;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
-%fullWidth{
-    width: 100%;
-    height: 280px;
+#wrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+#main{
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  min-height: calc(100vh - 500px);
+}
+
+body {
+  font-family: $roboto-slab;
+  margin: 0;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1, h2, p, button, a {
+  font-family: $roboto-slab;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.justify-content-between {
+  justify-content: space-between;
+}
+
+.justify-content-space-between{
+  justify-content: space-between;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.img-responsive {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.list-none {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.d-block {
+  display: block;
+}
+
+label {
+  cursor: pointer;
+}
+
+input[type="submit"],
+button {
+  cursor: pointer;
+  transition: all 0.4s ease;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+}
+
+img {
+  vertical-align: top;
+  border-style: none;
+}
+
+button:focus,
+textarea:focus,
+input:focus,
+select {
+  outline: none;
+}
+
+*:focus {
+  outline: none;
 }
