--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -16,3 +16,4 @@ $footer-heading-color:#6c6c6c;
 $footer-text-color:#cacaca;
 $footer-bg-color:#000;
 $footer-icon-color:#a89574;
+$sidebar-text-color:#818181;
