--- a/css/global.css
+++ b/css/global.css
@@ -8,7 +8,6 @@
 
 #wrapper {
   width: 100%;
-  height: 100%;
   position: relative;
   overflow: hidden; }
 
@@ -21,6 +20,7 @@
 body {
   font-family: "Roboto Slab", serif;
   margin: 0;
+  min-width: 320px;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: none;
   -webkit-font-smoothing: antialiased;
@@ -28,16 +28,42 @@ body {
 
 .container {
   max-width: 1140px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  padding: 0 15px; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: #000; }
 
 h1, h2, p, button, a {
   font-family: "Roboto Slab", serif; }
 
+address {
+  font-style: inherit; }
+
+.btn-primary {
+  background-color: #3f8dbf;
+  color: #fff;
+  padding: 10px 10px;
+  border: 1px solid #3f8dbf;
+  outline: none;
+  border-radius: 2px;
+  font-size: 14px;
+  margin: 16px auto;
+  display: block;
+  cursor: pointer;
+  text-transform: uppercase; }
+  .btn-primary:hover {
+    background-color: #fff;
+    color: #3f8dbf;
+    border: 1px solid #fff;
+    transition: all .5s; }
+
 .d-flex {
   display: flex; }
+
+.flex-wrap {
+  flex-wrap: wrap; }
 
 .justify-content-between {
   justify-content: space-between; }
@@ -93,21 +119,56 @@ select {
 #header {
   background-color: #e5e5e5; }
   #header .header-flex {
-    padding: 16px 0; }
+    padding: 16px 15px; }
   #header .logo {
     width: 130px; }
-  #header #nav ul {
-    list-style: none; }
-    #header #nav ul li {
-      margin: 0 20px; }
-      #header #nav ul li a {
-        text-decoration: none;
-        color: #000;
-        font-size: 16px;
-        text-transform: uppercase; }
-        #header #nav ul li a:hover {
-          color: #33c0a5;
-          transition: all .5s; }
+  #header #nav {
+    display: block; }
+    #header #nav ul {
+      list-style: none; }
+      #header #nav ul li {
+        margin: 0 0 0 20px; }
+        #header #nav ul li a {
+          color: #000;
+          font-size: 16px;
+          text-transform: uppercase; }
+          #header #nav ul li a:hover {
+            color: #33c0a5;
+            transition: all .5s; }
+  #header i {
+    display: none;
+    font-size: 24px;
+    cursor: pointer; }
+  #header .sidenav {
+    height: 100%;
+    position: fixed;
+    z-index: 400;
+    top: 0;
+    left: -50%;
+    width: 50%;
+    background-color: #000;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px; }
+    #header .sidenav a {
+      padding: 8px 8px 8px 32px;
+      text-decoration: none;
+      font-size: 20px;
+      color: #818181;
+      display: block;
+      transition: 0.3s; }
+      #header .sidenav a:hover {
+        color: #33c0a5; }
+    #header .sidenav .closebtn {
+      position: absolute;
+      top: -10px;
+      right: 0;
+      font-size: 30px;
+      margin-left: 50px; }
+      #header .sidenav .closebtn:hover {
+        color: #33c0a5; }
+    #header .sidenav.sidenav-show {
+      left: 0; }
 
 .banner {
   background-image: url("../images/banner.png");
@@ -122,6 +183,8 @@ select {
     flex-direction: column;
     max-width: 1140px;
     margin: 0 auto;
+    padding: 0 15px;
+    text-align: center;
     height: 100%; }
     .banner-centering h1 {
       font-size: 40px;
@@ -129,30 +192,10 @@ select {
       margin-bottom: 10px; }
     .banner-centering h2 {
       font-size: 32px;
-      text-align: center;
       color: #a8a8a8;
       margin-bottom: 10px; }
-    .banner-centering .btn-primary {
-      background-color: #3f8dbf;
-      color: #fff;
-      padding: 10px 10px;
-      border: 1px solid #3f8dbf;
-      outline: none;
-      border-radius: 2px;
-      font-size: 14px;
-      margin: 16px auto;
-      display: block;
-      cursor: pointer;
-      text-transform: uppercase; }
-      .banner-centering .btn-primary:hover {
-        background-color: #fff;
-        color: #3f8dbf;
-        border: 1px solid #fff;
-        transition: all .5s; }
 
 .services-section {
-  display: flex;
-  justify-content: space-between;
   border-bottom: 1px solid #6b6767;
   margin-bottom: 40px; }
   .services-section .col {
@@ -173,17 +216,17 @@ select {
       height: 90px;
       border-radius: 100%; }
 
-.section-work {
+.section-work h3 {
+  font-size: 18px;
+  color: #4e4e4e;
   margin-bottom: 40px; }
-  .section-work h3 {
-    font-size: 18px;
-    color: #4e4e4e;
-    margin-bottom: 40px; }
+
+.section-work-grid {
+  margin: 0 -5px; }
   .section-work-grid .col {
+    margin-bottom: 40px;
     flex-basis: 33.33%;
-    padding-left: 10px; }
-    .section-work-grid .col:first-child {
-      padding-left: 0; }
+    padding: 0 5px; }
   .section-work-grid img {
     height: 280px;
     object-fit: cover; }
@@ -207,12 +250,15 @@ select {
   background-color: #000;
   padding: 50px 0; }
   #footer .footer-grid {
-    border-bottom: 1px solid #6b6767; }
+    border-bottom: 1px solid #6b6767;
+    margin-bottom: 50px; }
+    #footer .footer-grid .footer-column-container {
+      margin: 0 -20px; }
     #footer .footer-grid .footer-col {
       flex-basis: 25%;
-      padding-left: 30px; }
-      #footer .footer-grid .footer-col:first-child {
-        padding-left: 0; }
+      padding: 0 20px; }
+      #footer .footer-grid .footer-col .icon-plus {
+        display: none; }
       #footer .footer-grid .footer-col .title {
         font-size: 18px;
         color: #6c6c6c; }
@@ -225,6 +271,8 @@ select {
           padding-bottom: 25px;
           display: flex;
           font-weight: 300; }
+          #footer .footer-grid .footer-col ul li a {
+            color: #cacaca; }
           #footer .footer-grid .footer-col ul li span {
             display: block;
             padding-top: 9px; }
@@ -244,4 +292,77 @@ select {
     max-width: 1140px;
     margin: 0 auto;
     color: #cacaca;
-    padding-top: 50px; }
+    padding: 0 15px; }
+
+@media (max-width: 1030px) {
+  .banner-centering h1 {
+    font-size: 32px; }
+  .banner-centering h2 {
+    font-size: 25px; } }
+
+@media (max-width: 854px) {
+  #footer .footer-grid .footer-column-container {
+    margin: 0 -10px; }
+  #footer .footer-grid .footer-col {
+    flex-basis: 25%;
+    padding: 0 10px; }
+  .banner {
+    height: calc(80vh - 62px); }
+  .banner-centering h1 {
+    font-size: 24px; }
+  .banner-centering h2 {
+    font-size: 18px; } }
+
+@media (max-width: 728px) {
+  .banner-centering h1 {
+    font-size: 24px; }
+  .banner-centering h2 {
+    font-size: 18px; }
+  #header #nav {
+    display: none; }
+  #header i {
+    display: block; }
+  .services-section .col {
+    flex-basis: 50%; }
+  .section-work-grid .col {
+    flex-basis: 50%; }
+  #footer .footer-grid .footer-col {
+    flex-basis: 50%; } }
+
+@media (max-width: 480px) {
+  #header .logo {
+    width: 100px; }
+  .banner {
+    height: calc(52vh - 62px); }
+  .banner-centering h1 {
+    font-size: 18px; }
+  .banner-centering h2 {
+    font-size: 14px; }
+  .services-section .col {
+    flex-basis: 100%; }
+  .section-work-grid .col {
+    flex-basis: 100%;
+    padding-left: 0; }
+  #footer {
+    padding: 30px 0; }
+    #footer .footer-grid {
+      margin: 0 0 15px; }
+      #footer .footer-grid .footer-column-container {
+        margin: 0; }
+      #footer .footer-grid .footer-col {
+        position: relative;
+        flex-basis: 100%;
+        margin-bottom: 15px;
+        padding: 0; }
+        #footer .footer-grid .footer-col .icon-plus {
+          display: block;
+          color: #fff;
+          position: absolute;
+          top: 0;
+          right: 0; }
+        #footer .footer-grid .footer-col .footer-content {
+          display: none; }
+        #footer .footer-grid .footer-col .title {
+          color: #fff; }
+    #footer-copyright p {
+      font-size: 14px; } }
